syntax = "proto3";

package aws.controller;
option go_package = "github.com/CyberAgent/mimosa-aws/proto/controller";

import "google/protobuf/empty.proto";
import "controller/entity.proto";

service AWSService {
  // AWS
  rpc ListAWS(ListAWSRequest) returns (ListAWSResponse);
  rpc PutAWS(PutAWSRequest) returns (PutAWSResponse);
  rpc DeleteAWS(DeleteAWSRequest) returns (google.protobuf.Empty);

  // AWS DataSource
  rpc ListDataSource(ListDataSourceRequest) returns (ListDataSourceResponse);
  rpc AttachDataSource(AttachDataSourceRequest)
      returns (AttachDataSourceResponse);
  rpc DetachDataSource(DetachDataSourceRequest) returns (google.protobuf.Empty);

  // Scan
  rpc InvokeScan(InvokeScanRequest) returns (google.protobuf.Empty);
}

message ListAWSRequest {
  uint32 project_id = 1;
  uint32 aws_id = 2;
  string aws_account_id = 3;
}

message ListAWSResponse { repeated AWS aws = 1; }

message PutAWSRequest {
  uint32 project_id = 1;
  AWSForUpsert aws = 2;
}

message PutAWSResponse { AWS aws = 1; }

message DeleteAWSRequest {
  uint32 project_id = 1;
  uint32 aws_id = 2;
}

message ListDataSourceRequest {
  uint32 project_id = 1;
  uint32 aws_id = 2;
  string data_source = 3;
}

message ListDataSourceResponse { repeated DataSource data_source = 1; }

message AttachDataSourceRequest {
  uint32 project_id = 1;
  DataSourceForAttach attach_data_source = 2;
}

message AttachDataSourceResponse { DataSource data_source = 1; }

message DetachDataSourceRequest {
  uint32 project_id = 1;
  uint32 aws_id = 2;
  uint32 aws_data_source_id = 3;
}

message InvokeScanRequest {
  uint32 project_id = 1;
  uint32 aws_id = 2;
  uint32 aws_data_source_id = 3;
}
